--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+APP_CONTACT_EMAIL=contact.name@company.com
+APP_CONTACT_NAME=Contact Name
+APP_CONTACT_URL=https://contact_company
+APP_CONTACT_COMPANY=Contact Company
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
