--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=turboBASE
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -32,6 +32,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=contact@company.com
+MAIL_FROM_NAME=turboBASE
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
